[diem_ngap] them SSE
